# hk-can-hackathon-2024

./: .gitignore  README.md
backend-sync/: .gitignore  Readme.md  pom.xml
backend-sync/bat/: startup.bat
backend-sync/docker/: docker-compose.yml
backend-sync/libs/: Readme.md
backend-sync/src/main/resources/: application-local.properties  application-prod.properties  application.properties
inventory-portal/: .env  .env.example  .eslintrc.js  .gitignore  logger.ts  next.config.mjs  package-lock.json  package.json  schema.prisma
inventory-portal/.husky/: pre-commit
inventory-portal/public/: manifest.json
inventory-portal/src/app/: _app.tsx  globals.css  layout.tsx  page.tsx
inventory-portal/src/app/inventory/: layout.tsx  page.tsx
inventory-portal/src/components/: fliter-sheet.tsx  fliter-widget.tsx  inventory-card.tsx  inventory-details.tsx  inventory-list.tsx  nav-bar.tsx  pagination.tsx  product-card.tsx  product-details.tsx  product-list.tsx  search.tsx  skeletons.tsx
inventory-portal/src/components/ui/: pagination.tsx
inventory-portal/src/constant/: app-error.ts  file-upload-configuration.ts
inventory-portal/src/lib/: data.ts  definitions.ts  env.ts  uploadthing.ts  utils.ts
inventory-portal/src/model/: generic-response.model.ts
poc/: README.md
poc/access-odbc-nodejs/: app.js  package-lock.json  package.json
poc/access-odbc-python/: .env.example  access.py  odbc_to_pg.py  pyproject.toml
poc/access-sdk-java/: Readme.md  pom.xml
poc/access-sdk-java/src/main/resources/: application.properties
(+2133 files in other folders)
